# Fable.Multiverse

./: .gitignore  Fable.Multiverse.fsproj  Fable.Multiverse.sln  README.md
content/: .gitignore  ProjectNameVar.sln  README.md  build.cmd  build.sh  package-lock.json  package.json  pyproject.toml
content/.devcontainer/: Dockerfile  devcontainer.json
content/.template.config/: template.json
content/src/ProjectNameVar/: Main.fs  ProjectNameVar.fsproj
content/src/ProjectNameVar.CSharp/: Main.cs  ProjectNameVar.CSharp.csproj
content/src/ProjectNameVar.CSharp/Util/: Option.cs  TupleExtensions.cs
content/tests/ProjectNameVar.CSharp.Tests/: ProjectNameVar.CSharp.Tests.csproj  UnitTest1.cs
content/tests/ProjectNameVar.CSharp.Tests/Util/: CompletenesUtil.cs
content/tests/ProjectNameVar.JavaScript.Tests/: ProjectNameVar.js
content/tests/ProjectNameVar.Python.Tests/: test_ProjectNameVar.py
content/tests/ProjectNameVar.Tests/: Main.fs  ProjectNameVar.Tests.fsproj
