[tool.poetry]
name = "ProjectNameVar"
version = "0.1.0"
description = ""
authors = []
maintainers = []
readme = "README.md"
repository = "https://github.com/{Owner}/ProjectNameVar"
keywords = []

[tool.poetry.dependencies]
python = "^3.11"
fable-library = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"